modal overflow bug fix

--- a/src/components/purchase-ticket/ticket.module.scss
+++ b/src/components/purchase-ticket/ticket.module.scss
@@ -2,6 +2,7 @@
 
 .ticket_container {
   position: relative;
+  height: 100%;
 }
 
 .ticket_body {
